[tool.poetry]
name = "async-dataloader"
version = "0.1.0"
description = "Asyncio Dataloader for GraphQL."
authors = ["syfun <sunyu418@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/syfun/async-dataloader"

packages = [
    { include = "dataloader" }
]

[tool.poetry.dependencies]
python = ">=3.7"
typing_extensions = { version =  "^3.7.4", python = "< 3.8" }

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
pytest-asyncio = "^0.12.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
